use old java syntax